syntax = "proto3";

option go_package = "github.com/pratyush934/mastering-gobackend/common/api";

package api ;

message Order {
  string  ID = 1;
  string customerId = 2;
  string Status = 3;
  repeated Item Items = 4;
}
message Item {
  string  ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceId = 4;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
}
message  ItemsWithQuantity {
  string  ID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string customerId = 1;
  repeated ItemsWithQuantity Items = 2;
}

message  CreateOrderResponse {

}